fixed some spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 #white {
-  color: white !important;
+  color: white;
   font-size: 18px;
 }
 
